force-app/main/default/objects/Request__c/fields/DI_Feasibility_Test__c.field-meta.xml
<CustomField>
    <fullName>DI_Feasibility_Test__c</fullName>
    <label>DI Feasibility Test</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>