force-app/main/default/objects/Request__c/fields/DI_Non_ARR__c.field-meta.xml
<CustomField>
    <fullName>DI_Non_ARR__c</fullName>
    <label>Non-ARR</label>
    <summarizedField>Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Line_Item__c.Deliverable_Type__c</field>
        <operation>contains</operation>
        <value>One</value>
    </summaryFilterItems>
    <summaryForeignKey>Line_Item__c.Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>