force-app/main/default/objects/Request__c/fields/DI_Pricing_Legal__c.field-meta.xml
<CustomField>
    <fullName>DI_Pricing_Legal__c</fullName>
    <description>This field is redundant according to James P</description>
    <label>DI Pricing/Legal</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>