force-app/main/default/objects/Request__c/fields/DI_Request_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>DI_Request_Email_Address__c</fullName>
    <label>DI Request Email Address</label>
    <type>Email</type>
</CustomField>