force-app/main/default/objects/Request__c/fields/Did_we_try_to_send_the_SW_template__c.field-meta.xml
<CustomField>
    <fullName>Did_we_try_to_send_the_SW_template__c</fullName>
    <description>MIS-1561 DDQ- Change the field name Have We Tried Pushing Back? to Did we try to send the FISD template?</description>
    <inlineHelpText>Steps to filing a DDQ/Security Questionnaire request:

Share with the client the SOC3 and/or FISD documents (no NDA needed!)

If the client requires more information and meets the threshold for filing information requests (50k+), they will need to sign an NDA.
2.A. Once an NDA is signed, file a DDQ/security questionnaire request.</inlineHelpText>
    <label>Did we try to send the SW templates?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, pending client review</fullName>
            </value>
            <value>
                <fullName>Yes, the client had accepted it</fullName>
            </value>
            <value>
                <fullName>Yes, the client pushed back</fullName>
            </value>
            <value>
                <fullName>Not yet</fullName>
            </value>
            <value>
                <fullName>The template is not applicable to the client</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>