force-app/main/default/objects/Request__c/fields/Discovery_Call__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discovery Call</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>