force-app/main/default/objects/Request__c/fields/Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Documents_Required__c</fullName>
    <description>#1113520</description>
    <inlineHelpText>DGT/RFI/TRC/NO PE/10F etc.</inlineHelpText>
    <label>Documents Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>