force-app/main/default/objects/Request__c/fields/Does_the_customer_have_a_Vendor_Portal__c.field-meta.xml
<CustomField>
    <fullName>Does_the_customer_have_a_Vendor_Portal__c</fullName>
    <description>#1113520</description>
    <label>Does the customer have a Vendor Portal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>