force-app/main/default/objects/Request__c/fields/Does_this_customer_have_a_PRO_subscripti__c.field-meta.xml
<CustomField>
    <fullName>Does_this_customer_have_a_PRO_subscripti__c</fullName>
    <description>MIS-3203</description>
    <label>Do the customer have a PRO subscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>