force-app/main/default/objects/Request__c/fields/Effect_Date_of_New_Features__c.field-meta.xml
<CustomField>
    <fullName>Effect_Date_of_New_Features__c</fullName>
    <inlineHelpText>If there are additional features, when do they come into effect?</inlineHelpText>
    <label>Effective Date of New Features</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal Date</fullName>
            </value>
            <value>
                <fullName>Upon Signature</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>