force-app/main/default/objects/Request__c/fields/Email_Support__c.field-meta.xml
<CustomField>
    <fullName>Email_Support__c</fullName>
    <label>Email Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>