force-app/main/default/objects/Request__c/fields/End_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Contract_Date__c</fullName>
    <description>MIS-3796</description>
    <label>End Contract Date</label>
    <type>Date</type>
</CustomField>