force-app/main/default/objects/Request__c/fields/End_date_of_current_PRO_subscription__c.field-meta.xml
<CustomField>
    <fullName>End_date_of_current_PRO_subscription__c</fullName>
    <description>MIS-3203</description>
    <label>End date of current PRO subscription</label>
    <type>Date</type>
</CustomField>