force-app/main/default/objects/Request__c/fields/End_project_date__c.field-meta.xml
<CustomField>
    <fullName>End_project_date__c</fullName>
    <label>End project date</label>
    <type>Date</type>
</CustomField>