force-app/main/default/objects/Request__c/fields/Escalation_Reason_Data_Needs__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason_Data_Needs__c</fullName>
    <description>MIS-5318</description>
    <label>Escalation Reason &amp; Data Needs</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>