force-app/main/default/objects/Request__c/fields/Escalations__c.field-meta.xml
<CustomField>
    <fullName>Escalations__c</fullName>
    <label>Escalations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>