force-app/main/default/objects/Request__c/fields/Est_Quarter_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Quarter_Close_Date__c</fullName>
    <description>MIS-3796</description>
    <label>Est Quarter Close Date</label>
    <type>Date</type>
</CustomField>