force-app/main/default/objects/Request__c/fields/Excel_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Excel_Analysis__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Excel Analysis</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>