force-app/main/default/objects/Request__c/fields/Expected_Impact__c.field-meta.xml
<CustomField>
    <fullName>Expected_Impact__c</fullName>
    <label>Expected Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Prevent churn</fullName>
            </value>
            <value>
                <fullName>New sale support</fullName>
            </value>
            <value>
                <fullName>Improve engagement/relationship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>