force-app/main/default/objects/Request__c/fields/Extension_Renewal_Period__c.field-meta.xml
<CustomField>
    <fullName>Extension_Renewal_Period__c</fullName>
    <inlineHelpText>1 year, 2 years, etc.</inlineHelpText>
    <label>Extension/Renewal Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>