force-app/main/default/objects/Request__c/fields/Final_assessment_survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Final_assessment_survey_Link__c</fullName>
    <label>Final assessment survey (Link)</label>
    <type>Url</type>
</CustomField>