force-app/main/default/objects/Request__c/fields/FR_Account__c.field-meta.xml
<CustomField>
    <fullName>FR_Account__c</fullName>
    <description>#1116408</description>
    <formula>Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>