force-app/main/default/objects/Request__c/fields/Generate_NDA__c.field-meta.xml
<CustomField>
    <fullName>Generate_NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>After checking the check box please go to the top of the page and click on the Generate NDA button</inlineHelpText>
    <label>Generate NDA</label>
    <type>Checkbox</type>
</CustomField>