force-app/main/default/objects/Request__c/fields/GM_Confirmation_Attachment__c.field-meta.xml
<CustomField>
    <fullName>GM_Confirmation_Attachment__c</fullName>
    <description>MIS-775</description>
    <inlineHelpText>All other churn protection requests outside of the above list - must go through approval process (to be detailed) - no later of the last day of the original renewal month. In addition, please add the GM&apos;s approval</inlineHelpText>
    <label>GM Confirmation Attachment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>