force-app/main/default/objects/Request__c/fields/Governing_Law_Notes__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law_Notes__c</fullName>
    <label>Governing Law Notes</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>