force-app/main/default/objects/Request__c/fields/Green_Lane_Document__c.field-meta.xml
<CustomField>
    <fullName>Green_Lane_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked By Billing when final version approved</description>
    <label>Green Lane Document</label>
    <type>Checkbox</type>
</CustomField>