force-app/main/default/objects/Request__c/fields/Group_Steering_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Group_Steering_Sessions__c</fullName>
    <label>Group Steering Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>