force-app/main/default/objects/Request__c/fields/Group_Training_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Group_Training_Sessions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Group Training Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>