force-app/main/default/objects/Request__c/fields/Have_we_tried_pushing_back__c.field-meta.xml
<CustomField>
    <fullName>Have_we_tried_pushing_back__c</fullName>
    <inlineHelpText>Have we tried pushing back on the need for these questionnaires?</inlineHelpText>
    <label>Have We Tried Pushing Back?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>