force-app/main/default/objects/Request__c/fields/High_Level_Group_Product_Training__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Group_Product_Training__c</fullName>
    <label>High Level Group Product Training</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>