force-app/main/default/objects/Request__c/fields/How_Well_do_They_Know_PRO__c.field-meta.xml
<CustomField>
    <fullName>How_Well_do_They_Know_PRO__c</fullName>
    <label>How Well do They Know PRO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>