force-app/main/default/objects/Request__c/fields/Includes_migration__c.field-meta.xml
<CustomField>
    <fullName>Includes_migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes migration?</label>
    <type>Checkbox</type>
</CustomField>