force-app/main/default/objects/Request__c/fields/Industries_Covered__c.field-meta.xml
<CustomField>
    <fullName>Industries_Covered__c</fullName>
    <description>MIS-7726</description>
    <label>Industries Covered</label>
    <type>TextArea</type>
</CustomField>