force-app/main/default/objects/Request__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Automotive &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Banking &amp; insurance</fullName>
            </value>
            <value>
                <fullName>Consulting &amp; Market Research</fullName>
            </value>
            <value>
                <fullName>CPG, Food &amp; Beverages</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Financial services</fullName>
            </value>
            <value>
                <fullName>Gambling / Gaming</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharma &amp; Healthcare</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Recruitment &amp; Jobs</fullName>
            </value>
            <value>
                <fullName>Retail / eCommerce</fullName>
            </value>
            <value>
                <fullName>Software &amp; Internet</fullName>
            </value>
            <value>
                <fullName>Telecom &amp; Hardware</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>