force-app/main/default/objects/Request__c/fields/Initial_Term__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term__c</fullName>
    <label>Initial Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>