force-app/main/default/objects/Request__c/fields/Insight_Deck__c.field-meta.xml
<CustomField>
    <fullName>Insight_Deck__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MIS-7706</description>
    <label>Insight Deck</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>