force-app/main/default/objects/Request__c/fields/Insight_Email__c.field-meta.xml
<CustomField>
    <fullName>Insight_Email__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Insight Email</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>