force-app/main/default/objects/Request__c/fields/Insights_Description__c.field-meta.xml
<CustomField>
    <fullName>Insights_Description__c</fullName>
    <inlineHelpText>Please explain what the desired insights are expected from the data and analysis</inlineHelpText>
    <label>Insights (Description)</label>
    <length>5600</length>
    <type>LongTextArea</type>
</CustomField>