force-app/main/default/objects/Request__c/fields/Insights_Provided__c.field-meta.xml
<CustomField>
    <fullName>Insights_Provided__c</fullName>
    <description>MIS-7726</description>
    <inlineHelpText>For Insights team to fill in</inlineHelpText>
    <label>Insights Provided</label>
    <type>TextArea</type>
</CustomField>