force-app/main/default/objects/Request__c/fields/Insights_Required__c.field-meta.xml
<CustomField>
    <fullName>Insights_Required__c</fullName>
    <description>MIS-7726</description>
    <label>Insights Required</label>
    <type>TextArea</type>
</CustomField>