force-app/main/default/objects/Request__c/fields/Internal_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Internal_Meeting__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MIS-7706</description>
    <label>Internal Meeting</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>