force-app/main/default/objects/Request__c/fields/Internal_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Target_Date__c</fullName>
    <inlineHelpText>Internal planning date. Not a delivery commitment.</inlineHelpText>
    <label>Internal Target Date</label>
    <type>Date</type>
</CustomField>