force-app/main/default/objects/Request__c/fields/Invoiced_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Price__c</fullName>
    <label>Invoiced Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>