force-app/main/default/objects/Request__c/fields/Jira_Epic_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Epic_Status__c</fullName>
    <description>MIS-7859</description>
    <label>Jira Epic Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>