force-app/main/default/objects/Request__c/fields/Jira_Key__c.field-meta.xml
<CustomField>
    <fullName>Jira_Key__c</fullName>
    <description>MIS-7859</description>
    <label>Jira Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>