force-app/main/default/objects/Request__c/fields/JIRA_Link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Link__c</fullName>
    <description>MIS-3796</description>
    <label>JIRA Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>