force-app/main/default/objects/Request__c/fields/Jira_Summary__c.field-meta.xml
<CustomField>
    <fullName>Jira_Summary__c</fullName>
    <description>MIS-7859</description>
    <label>Jira Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>