force-app/main/default/objects/Request__c/fields/Key_Metrics_Definitions_Training__c.field-meta.xml
<CustomField>
    <fullName>Key_Metrics_Definitions_Training__c</fullName>
    <description>Key Metrics Definitions Training (Data trials)</description>
    <label>Key Metrics Definitions Training</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>