force-app/main/default/objects/Request__c/fields/Key_sponsor_at_client__c.field-meta.xml
<CustomField>
    <fullName>Key_sponsor_at_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key sponsor at client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests (Key sponsor at client)</relationshipLabel>
    <relationshipName>Advisory_Services_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>