force-app/main/default/objects/Request__c/fields/Kick_Off_Call__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Call__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Kick Off Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>