force-app/main/default/objects/Request__c/fields/Kickoff_Calls_date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Calls_date__c</fullName>
    <description>MIS-4200 - for onboarding request</description>
    <label>Kickoff Calls Date</label>
    <type>Date</type>
</CustomField>