force-app/main/default/objects/Request__c/fields/KPIs__c.field-meta.xml
<CustomField>
    <fullName>KPIs__c</fullName>
    <inlineHelpText>Please list KPIs and metrics expected to be analyzed</inlineHelpText>
    <label>KPIs</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>