force-app/main/default/objects/Request__c/fields/Legal_Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Legal_Escalation_Reason__c</fullName>
    <formula>IF(
  Account__r.Legal_Escalation__c,
  &quot;🛑 &quot; + Account__r.Legal_Escalation_Reason__c,
  &quot;&quot;
)</formula>
    <label>Legal Escalation Reason</label>
    <type>Text</type>
</CustomField>