force-app/main/default/objects/Request__c/fields/Legal_Request_Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Legal_Request_Prioritization__c</fullName>
    <description>Prioritize Legal requests based on the given parameters</description>
    <formula>IF(
  and(
    text(Status__c) &lt;&gt; &apos;Completed&apos;,
    text(Status__c) &lt;&gt; &apos;Cancelled&apos;,
    Opportunity__r.IsClosed = false,
    RecordType.Name = &apos;Legal Services&apos;
  ),
  IF(
    OR(
      Opportunity_ARR__c &gt;= 100000,
      Opportunity_Close_Date__c - 7 &lt;= TODAY(),
      text(Priority__c) = &apos;P1 (High Urgency)&apos;,
      DAY(today()) &gt; 21,
      and(
        Days_in_Current_Status__c &gt;= 5,
        OR(
          text(Status__c) = &apos;Submitted&apos;,
          text(Status__c) = &apos;Resubmitted&apos;
        )
      )
    ),
    &quot;1 - Critical&quot;,
    IF(
      OR(
        Opportunity_ARR__c &gt;= 70000,
        Opportunity_Close_Date__c - 14 &lt;= TODAY(),
        text(Priority__c) = &apos;P2 (Risk Account/Prospect)&apos;,
        and(
          Days_in_Current_Status__c = 4,
          OR(
            text(Status__c) = &apos;Submitted&apos;,
            text(Status__c) = &apos;Resubmitted&apos;
          )
        )
      ),
      &quot;2 - High&quot;,
      IF(
        OR(
          Opportunity_ARR__c &gt;= 25000,
          Opportunity_Close_Date__c - 30 &lt;= TODAY(),
          text(Priority__c) = &apos;P3 (When You Have Time)&apos;,
          and(
            Days_in_Current_Status__c = 3,
            OR(
              text(Status__c) = &apos;Submitted&apos;,
              text(Status__c) = &apos;Resubmitted&apos;
            )
          )
        ),
        &quot;3 - Medium&quot;,
        IF(
          AND(
            Days_in_Current_Status__c &lt; 3,
            OR(
              text(Status__c) = &apos;Submitted&apos;,
              text(Status__c) = &apos;Resubmitted&apos;
            )
          ),
          &quot;4 - Low&quot;,
          &quot;&quot;
        )
      )
    )
  ),
  &quot;&quot;
)</formula>
    <label>Legal Request Prioritization</label>
    <type>Text</type>
</CustomField>