force-app/main/default/objects/Request__c/fields/Link_to_Account_Configuration_sheet__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Account_Configuration_sheet__c</fullName>
    <description>MIS-5079</description>
    <label>Link to Account Configuration sheet</label>
    <type>Url</type>
</CustomField>