force-app/main/default/objects/Request__c/fields/Link_to_Contract__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Contract__c</fullName>
    <label>Link to Contract</label>
    <type>Url</type>
</CustomField>