force-app/main/default/objects/Request__c/fields/Link_to_Platform_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Platform_URL__c</fullName>
    <description>MIS-5318</description>
    <label>Link to Platform (URL)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>