force-app/main/default/objects/Request__c/fields/Link_to_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Proposal__c</fullName>
    <description>#1104786 ASR Request adjustments</description>
    <inlineHelpText>Please link to shared proposal</inlineHelpText>
    <label>Link to Proposal</label>
    <type>Url</type>
</CustomField>