force-app/main/default/objects/Request__c/fields/Link_to_SOW__c.field-meta.xml
<CustomField>
    <fullName>Link_to_SOW__c</fullName>
    <description>MIS-5079</description>
    <label>Link to SOW</label>
    <type>Url</type>
</CustomField>