force-app/main/default/objects/Request__c/fields/List_of_features_CC_and_Wire_Transfers__c.field-meta.xml
<CustomField>
    <fullName>List_of_features_CC_and_Wire_Transfers__c</fullName>
    <inlineHelpText>For CC or Wire Transfer account, please include all the features sold to the customer - Base Package &amp; Any Add Ons.</inlineHelpText>
    <label>List of features (CC and Wire Transfers)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>