force-app/main/default/objects/Request__c/fields/List_price__c.field-meta.xml
<CustomField>
    <fullName>List_price__c</fullName>
    <inlineHelpText>For AS request - This field refers to &apos;Full AS Contract Price&apos;</inlineHelpText>
    <label>List Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>