force-app/main/default/objects/Request__c/fields/List_Price_Embee__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Embee__c</fullName>
    <description>MIS-3796 - changed field label
MIS-1825</description>
    <label>% MRP out of full AS contract price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>