force-app/main/default/objects/Request__c/fields/List_Price_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Timestamp__c</fullName>
    <description>MIS-286 Manually populated</description>
    <label>Contract List Price Confirmed</label>
    <type>Date</type>
</CustomField>