force-app/main/default/objects/Request__c/fields/Low_ARR_Deal_Reason_for_Exception__c.field-meta.xml
<CustomField>
    <fullName>Low_ARR_Deal_Reason_for_Exception__c</fullName>
    <description>MIS-4963</description>
    <label>Low ARR Deal - Reason for Exception</label>
    <type>TextArea</type>
</CustomField>