force-app/main/default/objects/Request__c/fields/Merged_Account__c.field-meta.xml
<CustomField>
    <fullName>Merged_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-775</description>
    <inlineHelpText>Please select the Account to which it was merged</inlineHelpText>
    <label>Merged Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests (Merged Account)</relationshipLabel>
    <relationshipName>RequestsMerges</relationshipName>
    <type>Lookup</type>
</CustomField>