force-app/main/default/objects/Request__c/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>MIS-4239</description>
    <inlineHelpText>Example: “total traffic | deduplicated audience | desktop unique | mobile unique&quot;</inlineHelpText>
    <label>Metrics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>