force-app/main/default/objects/Request__c/fields/Mini_Deck__c.field-meta.xml
<CustomField>
    <fullName>Mini_Deck__c</fullName>
    <label>Short Deck</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>