force-app/main/default/objects/Request__c/fields/Mini_Decks_w_Links_to_recreate__c.field-meta.xml
<CustomField>
    <fullName>Mini_Decks_w_Links_to_recreate__c</fullName>
    <label>Mini Decks w/Links to recreate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>