force-app/main/default/objects/Request__c/fields/Monthly_Customer_Connects__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Customer_Connects__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MIS-4272</description>
    <label>Monthly Customer Connects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>