force-app/main/default/objects/Request__c/fields/Monthly_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_List_Price__c</fullName>
    <formula>If ( ispickval( Regularity__c , &apos;One Time&apos;),null,  List_price__c /12)</formula>
    <label>Monthly List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>