force-app/main/default/objects/Request__c/fields/Months_of_Historical_Data__c.field-meta.xml
<CustomField>
    <fullName>Months_of_Historical_Data__c</fullName>
    <label>Historical Data Requested</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>