force-app/main/default/objects/Request__c/fields/Motion__c.field-meta.xml
<CustomField>
    <fullName>Motion__c</fullName>
    <description>MIS-1843</description>
    <label>Motion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Post-Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>