force-app/main/default/objects/Request__c/fields/Named_users_location__c.field-meta.xml
<CustomField>
    <fullName>Named_users_location__c</fullName>
    <description>MIS-1393</description>
    <inlineHelpText>if it&apos;s more than one country, please specify</inlineHelpText>
    <label>Named Users Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>