force-app/main/default/objects/Request__c/fields/Needs_Assessment_survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment_survey_Link__c</fullName>
    <label>Needs Assessment survey (Link)</label>
    <type>Url</type>
</CustomField>