force-app/main/default/objects/Request__c/fields/New_No_Touch_Account__c.field-meta.xml
<CustomField>
    <fullName>New_No_Touch_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-775</description>
    <label>New No Touch Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests (New No Touch Account)</relationshipLabel>
    <relationshipName>RequestsNewNoTouchAccount</relationshipName>
    <type>Lookup</type>
</CustomField>