force-app/main/default/objects/Request__c/fields/New_proposed_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>New_proposed_Renewal_Date__c</fullName>
    <description>MQ-1314</description>
    <label>New Proposed Renewal Date</label>
    <type>Date</type>
</CustomField>